--- a/CatCommander/MainWindow.axaml
+++ b/CatCommander/MainWindow.axaml
@@ -65,11 +65,14 @@
                         <Setter Property="Height" Value="24" />
                         <Setter Property="Width" Value="24" />
                         <Setter Property="Padding" Value="0" />
-                        <Setter Property="Margin" Value="0" />
+                        <Setter Property="Margin" Value="1" />
                     </Style>
                 </StackPanel.Styles>
                 <Button>
                     <Image Source="/Images/close_32x32.png" />
+                </Button>
+                <Button>
+                    <PathIcon Data="{StaticResource SemiIconClose}" />
                 </Button>
                 <Button>
                     <Image Source="/Images/left_32x32.png" />
@@ -93,7 +96,7 @@
             </Grid.ColumnDefinitions>
 
             <!-- Left Pane -->
-            <ui:ItemsBrowser Grid.Column="0" />
+            <ui:MainPanel Grid.Column="0" />
 
             <!-- Vertical Menu and two splitters Between Panes -->
             <GridSplitter Grid.Column="1"
