--- a/CatCommander/UI/MainPanel.axaml
+++ b/CatCommander/UI/MainPanel.axaml
@@ -3,7 +3,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:ui="clr-namespace:CatCommander.UI"
+             xmlns:vm="clr-namespace:CatCommander.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="CatCommander.UI.MainPanel">
+             x:Class="CatCommander.UI.MainPanel"
+             x:DataType="vm:MainPanelViewModel">
     <ui:ItemsBrowser />
 </UserControl>
