--- a/CatCommander/MainWindow.axaml
+++ b/CatCommander/MainWindow.axaml
@@ -2,7 +2,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:ui="clr-namespace:CatCommander.UI"
+        xmlns:view="clr-namespace:CatCommander.View"
         xmlns:vm="clr-namespace:CatCommander.ViewModels"
         mc:Ignorable="d"
         d:DesignWidth="800" d:DesignHeight="450"
@@ -97,7 +97,7 @@
             </Grid.ColumnDefinitions>
 
             <!-- Left Pane -->
-            <ui:MainPanel Grid.Column="0" />
+            <view:MainPanel Grid.Column="0" />
 
             <!-- Vertical Menu and two splitters Between Panes -->
             <GridSplitter Grid.Column="1"
@@ -139,7 +139,7 @@
             </GridSplitter>
 
             <!-- Right Pane -->
-            <ui:MainPanel Grid.Column="2" />
+            <view:MainPanel Grid.Column="2" />
 
         </Grid>
     </DockPanel>
