--- a/CatCommander/MainWindow.axaml
+++ b/CatCommander/MainWindow.axaml
@@ -10,6 +10,7 @@
         WindowState="Maximized"
         x:Class="CatCommander.MainWindow"
         Title="CatCommander"
+        Icon="/Images/cat.png"
         x:DataType="vm:MainWindowViewModel">
     <!-- Top menu bar-->
     <NativeMenu.Menu>
@@ -85,6 +86,8 @@
                 <Button>
                     <Image Source="/Images/download_32x32.png" />
                 </Button>
+                
+                <TextBlock x:Name="tbKeyPreview"></TextBlock>
             </StackPanel>
         </Border>
 
