--- a/CatCommander/View/MainPanel.axaml
+++ b/CatCommander/View/MainPanel.axaml
@@ -7,5 +7,5 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="CatCommander.View.MainPanel"
              x:DataType="vm:MainPanelViewModel">
-    <view:ItemsBrowser />
+    <view:ItemsBrowser DataContext="{Binding ActiveBrowser}" />
 </UserControl>
