--- a/CatCommander/View/ItemBrowser.axaml
+++ b/CatCommander/View/ItemBrowser.axaml
@@ -5,8 +5,8 @@
              xmlns:vm="using:CatCommander.ViewModels"
              mc:Ignorable="d"
              d:DesignWidth="800" d:DesignHeight="600"
-             x:Class="CatCommander.View.ItemsBrowser"
-             x:DataType="vm:ItemsBrowserViewModel">
+             x:Class="CatCommander.View.ItemBrowser"
+             x:DataType="vm:ItemBrowserViewModel">
     <DockPanel>
         <!-- Path dropdown/editor at the top -->
         <Grid DockPanel.Dock="Top" ColumnDefinitions="Auto,*,Auto">
@@ -35,7 +35,6 @@
                      Watermark="Enter folder path...">
             </TextBox>
 
-            <!-- navigation history -->
             <Button Grid.Column="2"
                     Margin="2 0"
                     Padding="0"
