--- a/CatCommander/View/MainPanel.axaml
+++ b/CatCommander/View/MainPanel.axaml
@@ -8,8 +8,14 @@
              x:Class="CatCommander.View.MainPanel"
              x:DataType="vm:MainPanelViewModel">
     <DockPanel>
-        <TabStrip DockPanel.Dock="Top" ItemsSource="{Binding DeviceList}"></TabStrip>
-        <TabStrip DockPanel.Dock="Top" ItemsSource="{Binding RootFileItems}"></TabStrip>
+        <TabStrip DockPanel.Dock="Top" ItemsSource="{Binding Settings.DeviceList}"></TabStrip>
+        <TabStrip DockPanel.Dock="Top" ItemsSource="{Binding RootFileItems}">
+            <TabStrip.ItemTemplate>
+                <DataTemplate x:DataType="vm:ItemBrowserViewModel">
+                    <TextBlock Text="{Binding Title}" />
+                </DataTemplate>
+            </TabStrip.ItemTemplate>
+        </TabStrip>
         <view:ItemBrowser DataContext="{Binding ActiveFileItem}" />
     </DockPanel>
 </UserControl>
