--- a/CatCommander/View/MainWindow.axaml
+++ b/CatCommander/View/MainWindow.axaml
@@ -8,7 +8,7 @@
         d:DesignWidth="800" d:DesignHeight="450"
         MinWidth="500" MinHeight="400"
         WindowState="Maximized"
-        x:Class="CatCommander.MainWindow"
+        x:Class="CatCommander.View.MainWindow"
         Title="CatCommander"
         Icon="/Images/cat.png"
         x:DataType="vm:MainWindowViewModel">
@@ -76,8 +76,8 @@
                 <StackPanel.Styles>
                     <Style Selector="Button">
                         <Setter Property="MinHeight" Value="0" />
-                        <Setter Property="Height" Value="18" />
-                        <Setter Property="Width" Value="18" />
+                        <Setter Property="Height" Value="24" />
+                        <Setter Property="Width" Value="24" />
                         <Setter Property="Padding" Value="0" />
                         <Setter Property="Margin" Value="1" />
                     </Style>
@@ -94,7 +94,7 @@
                 <Button>
                     <Image Source="/Images/left_32x32.png" />
                 </Button>
-                <Separator Width="1" Height="14" Background="DarkGray" VerticalAlignment="Center" Margin="2" />
+                <Separator Width="1" Height="20" Background="DarkGray" VerticalAlignment="Center" Margin="2" />
                 <Button ToolTip.Tip="forward">
                     <Image Source="/Images/right_32x32.png" />
                 </Button>
