--- a/CatCommander/View/ItemBrowser.axaml
+++ b/CatCommander/View/ItemBrowser.axaml
@@ -12,8 +12,8 @@
         <Grid DockPanel.Dock="Top" ColumnDefinitions="Auto,*,Auto">
             <!-- show folder tree from root to current folder -->
             <Button Grid.Column="0"
-                    Padding="0"
                     Margin="2 0"
+                    Padding="0"
                     Width="24"
                     Height="24"
                     MinHeight="0">
@@ -21,7 +21,7 @@
                 <Button.Flyout>
                     <Flyout Placement="BottomEdgeAlignedRight">
                         <Border MinWidth="300" MaxHeight="400">
-                            <TreeView></TreeView>
+                            <TreeView ItemsSource="{Binding PathHistory}"></TreeView>
                         </Border>
                     </Flyout>
                 </Button.Flyout>
