--- a/CatCommander/View/ItemBrowser.axaml
+++ b/CatCommander/View/ItemBrowser.axaml
@@ -74,7 +74,10 @@
                       CanUserResizeColumns="True"
                       CanUserSortColumns="True"
                       ShowColumnHeaders="True"
-                      FontSize="12">
+                      FontSize="12"
+                      BorderThickness="1"
+                      BorderBrush="Black"
+                      >
             <TreeDataGrid.Styles>
                 <Style Selector="TreeDataGridRow">
                     <Setter Property="MinHeight" Value="12" />
@@ -82,7 +85,7 @@
                     <Setter Property="Margin" Value="0" />
                 </Style>
                 <Style Selector="TreeDataGridTextCell">
-                    <Setter Property="Padding" Value="0" />
+                    <Setter Property="Padding" Value="2 0" />
                     <Setter Property="Margin" Value="0" />
                 </Style>
             </TreeDataGrid.Styles>
